# flakes-E

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  setup.bat  setup.sh
Flakes_E/: asgi.py  settings.py  urls.py  wsgi.py
authentication/: urls.py  views.py
authentication/templates/auth/: auth.html  base.html  sign-in.html  sign-up.html
core/: urls.py  views.py
core/templates/core/: home.html
templates/allauth/socialaccount/: login.html
templates/auth/: sign-in.html  sign-up.html
